<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8sdp"
        tools:context=".add.AddBookActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_6sdp"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/enter_name"
                android:backgroundTint="@color/color_text"
                android:padding="@dimen/_8sdp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_6sdp"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_price"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/enter_price"
                android:backgroundTint="@color/color_text"
                android:padding="@dimen/_8sdp"
                android:inputType="numberSigned"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actor"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_6sdp"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_actor"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/enter_actor"
                android:backgroundTint="@color/color_text"
                android:padding="@dimen/_8sdp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image_url"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_6sdp"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_image"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/enter_url_image"
                android:backgroundTint="@color/color_text"
                android:padding="@dimen/_8sdp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/anim_button"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>